--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,9 @@
     <meta charset="utf-8">
     <title>Flatstack Warsaw Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://flatstack-warsaw-dashboard.github.io/hello-world-widget/main.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">
-      <fwd-hello-world-widget name="Friend"></fwd-hello-world-widget>
-    </div>
+    <div id="root"></div>
   </body>
 </html>
